--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "db:seed": "knex seed:run",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   },
